# MariaCpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindMariaDB.cmake
mariacpp/: CMakeLists.txt  connection.hpp  lib.hpp  mariadb_error.hpp  prepared_stmt.hpp  resultset.hpp  time.hpp  uri.hpp
mariacpp/bits/: bind.hpp
src/: CMakeLists.txt  bind.cpp  connection.cpp  lib.cpp  ma_time.c  prepared_stmt.cpp  resultset.cpp  time.cpp  uri.cpp
test/: CMakeLists.txt  async.cpp  connect.cpp  example.cpp  prepstmtc.cpp  prepstmtcpp.cpp  query.cpp  threads.cpp
